fix: aligned text as row inside box

--- a/src/theme/ItaliaTheme/Blocks/_squaresImageTemplate.scss
+++ b/src/theme/ItaliaTheme/Blocks/_squaresImageTemplate.scss
@@ -22,6 +22,7 @@
     align-items: flex-end;
     padding: 1.2rem;
     text-decoration: none;
+    flex-direction: row;
 
     .title {
       z-index: 2;
